[package]
name = "hdk_time_indexing_tests"
version = "0.0.1"
edition = "2021"

[workspace]

[lib]

[dependencies]
hdk_time_indexing = { path = "../", features = ["internal-testing"] } # unit under testing

serde = "=1.0.171"
hdk = "=0.2.1"
holo_hash = { version = "=0.1.1", features = ["encoding", "fixturators"] }
holochain_zome_types = { version = "=0.2.1", features = ["fixturators"] }
paste = "1.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
thiserror = "1"
mockall = "0.11"
assert_matches = "1.5"

[dev-dependencies]
fixt = "0.1.0"
holochain_types = "0.1.3"

[features]
default = ["mock"]
mock = ["hdk/mock", "hdk/test_utils"]
