[package]
name = "hc_zome_rea_agreement_defs"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
# :DUPE: hdk-rust-revid
hdk3 = {git = "https://github.com/holochain/holochain", rev = "c6b3a4f0", package = "hdk3"}

hc_zome_rea_agreement_storage = { path = "../storage" }
hc_zome_rea_agreement_storage_consts = { path = "../storage_consts" }
hc_zome_rea_commitment_storage_consts = { path = "../../rea_commitment/storage_consts" }
hc_zome_rea_economic_event_storage_consts = { path = "../../rea_economic_event/storage_consts" }

[lib]
crate-type = ["lib"]
