[package]
name = "hc_zome_rea_agreement_lib"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1"
# :DUPE: hdk-rust-revid
hdk = "0.0.100"

hdk_graph_helpers = { path = "../../hdk_graph_helpers" }
hc_zome_rea_agreement_storage_consts = { path = "../storage_consts" }
hc_zome_rea_agreement_storage = { path = "../storage" }
hc_zome_rea_agreement_rpc = { path = "../rpc" }

[lib]
crate-type = ["lib"]
